<resources>
    <string name="app_name">BookSharing</string>
    <string name="add_user"> Add user</string>
    <string name="show_user"> Show user</string>
    <string name="login">Login</string>
    <string name="sign">Sign Up</string>
    <string name="name">Name</string>
    <string name="I_name">Name: </string>
    <string name="I_birth">Birthday: </string>
    <string name="I_info">Description: </string>
    <string name="save">Save</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="W_F">Welcome</string>
    <string name="frase">Do not have already an account? Signup here</string>
    <string name="Welcome_frase">Welcome on this Book Sharing platform. Sign up with your email</string>
    <string name="title">Title</string>
    <string name="auth">Author</string>
    <string name="pub">Publisher</string>
    <string name="ed">Edition Year</string>
    <string name="condition">Condition\'s of the book</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default Info Title</string>
    <string name="default_info_snippet">Default Info Snippet</string>
    <string name="pick_place">Pick Place</string>
    <string name="title_activity_show_location">Map</string>
    <string name="title_activity_chat_list">ChatListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>

</resources>
