<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/book"
        android:padding="20px"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/user1"
            android:layout_marginTop="20px"
            android:id="@+id/Tv_UserImage"
            android:foregroundGravity="center"
            />
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="0.5"
            android:layout_alignLeft="@+id/Tv_UserImage"
            android:layout_below="@+id/Tv_UserImage"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:layout_marginLeft="40dp"
            android:theme="@style/Widget.AppCompat.RatingBar"/>


    </RelativeLayout>


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:scrollbarStyle="outsideOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="65px"
                android:layout_alignBottom="@+id/name"
                android:layout_toLeftOf="@+id/name"
                android:layout_toStartOf="@+id/name"
                android:paddingLeft="20px"
                android:paddingRight="30px"
                android:paddingTop="5dp"
                android:src="@drawable/user1" />

            <TextView
                android:id="@+id/name"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/age"
                android:layout_marginBottom="22dp"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:paddingTop="210dp"
                android:text="@string/I_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/fab_margin"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/age"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bio"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:text="@string/I_birth"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/fab_margin"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="65px"
                android:layout_marginTop="38dp"
                android:layout_toLeftOf="@+id/age"
                android:layout_toStartOf="@+id/age"
                android:paddingLeft="20px"
                android:paddingRight="30px"
                android:src="@drawable/birth"
                android:tint="@color/CartaZucchero" />

            <TextView
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/imageView2"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:text="@string/I_info"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/fab_margin"
                android:textStyle="italic"></TextView>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="80px"
                android:layout_below="@+id/imageView2"
                android:layout_marginTop="28dp"
                android:layout_toLeftOf="@+id/bio"
                android:layout_toStartOf="@+id/bio"
                android:paddingLeft="20px"
                android:paddingRight="30px"
                android:src="@drawable/bio"
                android:tint="@color/CartaZucchero" />
        </RelativeLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/contactbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scroll"
        android:layout_below="@+id/scroll"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@null"
        android:foregroundGravity="center"
        android:tint="@color/CartaZucchero"
        app:srcCompat="@drawable/ic_message" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/contactbutton"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/contactbutton"
        android:layout_toRightOf="@+id/contactbutton"
        android:text="Send a message"
        android:textColor="@color/CartaZucchero"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>
